--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "afyaconnect-app",
+ "name": "telehelix",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "cloudinary": "^2.7.0",
     "cookie": "^1.0.2",
     "dotenv": "^17.2.3",
-    "framer-motion": "^12.23.6",
+    "firebase": "^12.9.0",
+    "framer-motion": "^12.34.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
@@ -23,10 +24,11 @@
     "multer": "^2.0.2",
     "next": "15.4.1",
     "nodemailer": "^7.0.6",
+    "posthog-js": "^1.347.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "resend": "^6.1.2",
+    "resend": "^6.9.2",
     "twilio": "^5.8.0"
   },
   "devDependencies": {
