--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
  "name": "telehelix",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@sendgrid/mail": "^8.1.6",
-    "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
-    "cookie": "^1.0.2",
-    "dotenv": "^17.2.3",
-    "firebase": "^12.9.0",
-    "framer-motion": "^12.34.0",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.525.0",
-    "mongodb": "^6.18.0",
-    "mongoose": "^8.18.3",
-    "multer": "^2.0.2",
-    "next": "15.4.1",
-    "nodemailer": "^7.0.6",
-    "posthog-js": "^1.347.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
-    "resend": "^6.9.2",
-    "twilio": "^5.8.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.1",
-    "tailwindcss": "^4"
-  }
+ "version": "0.1.0",
+ "private": true,
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+ },
+ "dependencies": {
+  "@sendgrid/mail": "^8.1.6",
+  "bcryptjs": "^3.0.2",
+  "cloudinary": "^2.7.0",
+  "cookie": "^1.0.2",
+  "dotenv": "^17.2.3",
+  "firebase": "^12.9.0",
+  "framer-motion": "^12.34.0",
+  "js-cookie": "^3.0.5",
+  "jsonwebtoken": "^9.0.2",
+  "lucide-react": "^0.525.0",
+  "mongodb": "^6.18.0",
+  "mongoose": "^8.18.3",
+  "multer": "^2.0.2",
+  "next": "^16.1.6",
+  "nodemailer": "^7.0.6",
+  "posthog-js": "^1.347.2",
+  "react": "^19.2.4",
+  "react-dom": "^19.2.4",
+  "react-icons": "^5.5.0",
+  "resend": "^6.9.2",
+  "twilio": "^5.8.0"
+ },
+ "devDependencies": {
+  "@eslint/eslintrc": "^3",
+  "@tailwindcss/postcss": "^4",
+  "eslint": "^9",
+  "eslint-config-next": "^16.1.6",
+  "tailwindcss": "^4"
+ }
 }
